Added System.exit